CSS pulled from EE for basic design

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-	<div class="section">
+<div class="wrapper">
+	<h1 id="gong-fu-teacha-classroom">Gong Fu Tea|chA Classroom</h1>
+	<p>A plain-speak guide to Gong Fu Cha and Chinese Tea</p>
+	
+
+
+
+	<!--
+	<div class="oxidationSpectrum">
 		<div class="col-md-2">
 			<p class="greenTea">
 				Green Tea<br><br>
@@ -31,5 +39,7 @@
 			</p>
 		</div>
 	</div>
+	-->
+</div>
 </body>
 </html>
