updated colors and links. Added sections.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,49 @@
 </head>
 <body>
 <div class="wrapper">
-	<h1 id="gong-fu-teacha-classroom">Gong Fu Tea|chA Classroom</h1>
-	<p>A plain-speak guide to Gong Fu Cha and Chinese Tea</p>
+	<div class="titleBar">
+		<h1 id="gong-fu-teacha-classroom">Gong Fu Tea|chA Classroom</h1>
+		<p>A plain-speak guide to Gong Fu Cha <span class="chinese">(功夫茶)</span> and Chinese Tea</p>
+	</div>
+	<div class="contents">
+		<!-- insert contents here -->
+	</div>
+	<div>
+		<h2 id="what-is-gong-fu-cha">What is Gong Fu Cha <span class="chinese">(功夫茶)</span>?</h2>
+		<p>
+			Gong fu cha <span class="chinese">(功夫茶)</span> is a Chinese artform and practice for steeping and serving tea. 
+<br><br>
+			Gong fu <span class="chinese">(功夫)</span> is the Chinese pronunciation of what in the west is called "Kung Fu." In the Western mind, Kung Fu is limited to its association with Chinese martial arts, but in China the concept is much broader, referring to skill cultivated through repetitive mindful practice, with the point being to internalize the practiced movements over time and eventually reach a level of skill where one can perform these motions without having to think about them. To hone and habitualize the best practices of a craft into an internalized discipline is to cultivate strong Gong Fu. 
+<br><br>
+			Cha <span class="chinese">(茶)</span> is the Chinese word for tea. So Gong fu cha <span class="chinese">(功夫茶)</span> is about helping each different type of tea express itself in the best possible ways every time we steep. This requires practice. It requires getting to know each tea individually. It requires experimentation. It requires cultivation of the senses of smell and taste and touch.
+		</p>
+	</div>
+	<div>
+		<h2 id="what-is-tea">What is tea <span class="chinese">(茶)</span>?</h2>
+		<p>
+			Tea <span class="chinese">(茶)</span>, first and foremost, is a plant. The scientific name for this plant is <a class="wiki" href="https://en.wikipedia.org/wiki/Camellia_sinensis">Camellia Sinensis</a>.
+<br><br>
+			Tea is also a drink, made by taking the leaves/buds from this plant and steeping them in hot water.
+<br><br>
+			Tea comes in many <a class="localLink" href=#types-of-tea>types</a>, many of which are named after colors. 
+		</p>
+	</div>
+	<div>
+		<h2 id="types-of-tea">What are the types of tea?</h2>
+		<p>
+
+		</p>
+	</div>
+	<div>
+		<h2 id="what-is-not-tea">What about rooibos?? or hibiscus??</h2>
+		<p>
+			In the West, people call a lot of stuff "tea" that isn't actually tea. In many countries, the word "tea" is used to broadly describe drinks that are made by steeping plants and/or spices in hot water. Some examples include Rooibos, Chamomile, Rose, Chrysanthemum, Hibiscus, Mint, etc. Sometimes these items are mixed with tea; sometimes they are steeped by themselves. 
+<br><br>
+			Either way, the correct name for these drinks is <span class="def">Tisanes</span>. (another correct name is "Herbal Infusions")
+		</p>
+	</div>
 	
+
 
 
 
